Fix table alternative row colour in dark mode
I don't know if this is the best colour choice but it seems better than
'pink-white' which is the colour at the moment.

We don't have many tables in the documentation so this might have been
missed on the initial introduction of dark mode.

--- a/templates/index.css
+++ b/templates/index.css
@@ -556,6 +556,7 @@ body.theme-dark {
   --accented-background: var(--bg-shade-1);
   --background: var(--bg);
   --code-background: var(--bg-shade-2);
+  --table-background: var(--bg-mono-1);
   --hard-black: var(--taupe-mono-1);
   --links: var(--pink);
   --text: var(--taupe-mono-1);
